--- a/matchingapp/static/matchingapp/home.css
+++ b/matchingapp/static/matchingapp/home.css
@@ -39,3 +39,10 @@
 #myBtn:hover {
   background-color: #555; /* Add a dark-grey background on hover */
 }
+
+.labels{
+  background: -webkit-linear-gradient(90deg, #FC466B 0%, #3F5EFB 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: bold;
+}
