--- a/matchingapp/templates/matchingapp/profile.html
+++ b/matchingapp/templates/matchingapp/profile.html
@@ -11,33 +11,19 @@
 		<br/><img id="currentImage" name="currentImage"/><br/><br/>
 			<div class = "form-group">
 
-<!--when i get rid of this span the user data is not loaded-->
-				  	<span>
-					  	<label class="mr-sm-2" for="inlineFormCustomSelect">Date of Birth</label>
-							<div class="row">
-								<div class="col">
-							  	<select id="day" class="custom-select mb-2 mr-sm-2 mb-sm-0"></select>
-								</div>
-								<div class="col">
-								  <select id="month" class="custom-select mb-2 mr-sm-2 mb-sm-0">
-								  	<option value="january">January</option><option value="february">February</option>
-								  	<option value="march">March</option><option value="april">April</option>
-								  	<option value="may">May</option><option value="june">June</option>
-								  	<option value="july">July</option><option value="august">August</option>
-								  	<option value="september">September</option><option value="october">October</option>
-								  	<option value="november">November</option><option value="december">December</option>
-								  </select>
-								</div>
-								<div class="col">
-						  		<select id="year" class="custom-select mb-2 mr-sm-2 mb-sm-0"></select>
-								</div>
-							</div>
-				  		</span><br/>
+<!--when i get rid of this div the user data is not loaded-->
+			<div class="row">
+			  	<select id="day"><select>
+		  		<select id="year"></select>
+			</div>
+<!---------------------------------------------------------->
 
 			<label for="firstName">First Name:</label>
 			<p id = firstName> FirstName </p>
 			<label for="lastName">Last Name:</label>
 			<p id = "lastName"> Last Name </p>
+			<label for="dob">Date of Birth:</label>
+			<p id = dob> Date of Birth </p>
 			<label for="age">Age:</label>
 			<p id = age> Age </p>
 			<label for="bio">Bio:</label>
@@ -49,8 +35,19 @@
 	</div>
 
     </body>
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type = 'text/javascript'>
+
+
+
+		function obtainUser(){
+			var user = authenticateUser();
+		loadUserInfo(user);
+		}
+
+
       function authenticateUser(){
         var loggedIn = false;
         var username = "";
@@ -110,19 +107,7 @@
 						        var month = parseInt(parts[1], 10);
 						        var day = parseInt(parts[2], 10);
 
-						        dayList = document.getElementById('day');
-						        dayList.value = day;
-
-						        monthList = document.getElementById('month');
-						        monthString = convertMonth(month).toLowerCase();
-						        monthList.value = monthString;
-
-						        yearList = document.getElementById('year');
-						        yearList.value = year;
-
-
-
-
+								document.getElementById("dob").innerHTML = day + "-" + month + "-" + year;
 							       var hobbies = data[0].hobbies;
 							       var items = []
 		       	 				 for(var i=0; i < hobbies.length; i++){
@@ -186,12 +171,6 @@
 			  }
 			  yearList.value = maxYear;
 		  }
-
-      function obtainUser(){
-  			populateList();
-  			var user = authenticateUser();
-        loadUserInfo(user);
-      }
 
 		  function updateUser(name){
 				var csrf = $('input[name=csrfmiddlewaretoken]').val();
