--- a/matchingapp/templates/matchingapp/profile.html
+++ b/matchingapp/templates/matchingapp/profile.html
@@ -6,40 +6,30 @@
 {% block content %}
 {% csrf_token %}
 	<br/>
-  <div class="container">
+    <div class="container">
 		<h3 id="title" class="subheaders">| Profile</h3>
 		<br/><img id="currentImage" name="currentImage"/><br/><br/>
 			<div class = "form-group">
-
-<!--when i get rid of this div the user data is not loaded-->
-			<div class="row">
-			  	<select id="day"><select>
-		  		<select id="year"></select>
+				<label for="firstName">First Name:</label>
+				<p id = firstName> FirstName </p>
+				<label for="lastName">Last Name:</label>
+				<p id = "lastName"> Last Name </p>
+				<label for="dob">Date of Birth:</label>
+				<p id = dob> Date of Birth </p>
+				<label for="age">Age:</label>
+				<p id = age> Age </p>
+				<label for="bio">Bio:</label>
+				<p id = bio> Bio </p>
+				<label>Hobbies</label>
+				<ol id="hobbyList"> </ol>
 			</div>
-<!---------------------------------------------------------->
-
-			<label for="firstName">First Name:</label>
-			<p id = firstName> FirstName </p>
-			<label for="lastName">Last Name:</label>
-			<p id = "lastName"> Last Name </p>
-			<label for="dob">Date of Birth:</label>
-			<p id = dob> Date of Birth </p>
-			<label for="age">Age:</label>
-			<p id = age> Age </p>
-			<label for="bio">Bio:</label>
-			<p id = bio> Bio </p>
-			<label>Hobbies</label>
-			<ol id="hobbyList"> </ol>
-			<div class="form-group">
-			<button class="btn btn-primary"> Change Profile </button>
+			<button class="btn btn-primary" onclick="location.href = '../settings/'"">Change Profile</button>
 	</div>
 
     </body>
 
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type = 'text/javascript'>
-
 
 
 		function obtainUser(){
@@ -79,163 +69,47 @@
         return age;
       }
 
-			function loadUserInfo(username){
-				var csrf = $('input[name=csrfmiddlewaretoken]').val();
-		     $.ajax({
-		           async: false,
-		           type: 'POST',
-		           url: '/matchingapp/loadUser/',
-		           data: {
-								 csrfmiddlewaretoken: csrf,
-		             username: username
-		           },
-		           success: function(data){
-		              if(data[0].success === "true"){
+		function loadUserInfo(username){
+			var csrf = $('input[name=csrfmiddlewaretoken]').val();
+	     $.ajax({
+	           async: false,
+	           type: 'POST',
+	           url: '/matchingapp/loadUser/',
+	           data: {
+							 csrfmiddlewaretoken: csrf,
+	             username: username
+	           },
+	           success: function(data){
+	              if(data[0].success === "true"){
 
 
-						  document.getElementById("title").innerHTML = data[0].username;
-						  document.getElementById("firstName").innerHTML = data[0].firstName;
-						  document.getElementById("lastName").innerHTML = data[0].lastName;
-						  age = calculateAge(data[0].dob);
-						  document.getElementById("age").innerHTML = age;
-						  document.getElementById("bio").innerHTML = data[0].bio;
-						  $("#currentImage").attr('src', data[0].image);
+					  document.getElementById("title").innerHTML = "| " + data[0].username;
+					  document.getElementById("firstName").innerHTML = data[0].firstName;
+					  document.getElementById("lastName").innerHTML = data[0].lastName;
+					  age = calculateAge(data[0].dob);
+					  document.getElementById("age").innerHTML = age;
+					  document.getElementById("bio").innerHTML = data[0].bio;
+					  $("#currentImage").attr('src', data[0].image);
 
-						        var dateOfBirth = (data[0].dob).toString();
-						        var parts = dateOfBirth.split('-');
-						        var year = parseInt(parts[0], 10);
-						        var month = parseInt(parts[1], 10);
-						        var day = parseInt(parts[2], 10);
+					        var dateOfBirth = (data[0].dob).toString();
+					        var parts = dateOfBirth.split('-');
+					        var year = parseInt(parts[0], 10);
+					        var month = parseInt(parts[1], 10);
+					        var day = parseInt(parts[2], 10);
 
-								document.getElementById("dob").innerHTML = day + "-" + month + "-" + year;
-							       var hobbies = data[0].hobbies;
-							       var items = []
-		       	 				 for(var i=0; i < hobbies.length; i++){
-		        						items.push($('<li/>').text(hobbies[i]));
-		       					 }
-		       					 $('#hobbyList').append.apply($('#hobbyList'), items);
-		         				 $('input[name="gender"][value=' + data[0].gender + ']').attr('checked', true);
-		              }
-		           }
-		        });
-		      }
+							document.getElementById("dob").innerHTML = day + "-" + month + "-" + year;
+						       var hobbies = data[0].hobbies;
+						       var items = []
+	       	 				 for(var i=0; i < hobbies.length; i++){
+	        						items.push($('<li/>').text(hobbies[i]));
+	       					 }
+	       					 $('#hobbyList').append.apply($('#hobbyList'), items);
+	         				 $('input[name="gender"][value=' + data[0].gender + ']').attr('checked', true);
+	              }
+	           }
+	        });
+	      }
 
-		  function convertMonth(month){
-			  if(month === 1){ month = "January"; }
-			  else if(month === 2){ month = "February"; }
-			  else if(month === 3){ month = "March"; }
-			  else if(month === 4){ month = "April"; }
-			  else if(month === 5){ month = "May"; }
-			  else if(month === 6){ month = "June"; }
-			  else if(month === 7){ month = "July"; }
-			  else if(month === 8){ month = "August"; }
-			  else if(month === 9){ month = "September"; }
-			  else if(month === 10){ month = "October"; }
-			  else if(month === 11){ month = "November"; }
-			  else if(month === 12){ month = "December"; }
-			  else if(month === "january"){ month = 01; }
-			  else if(month === "february"){ month = 02; }
-			  else if(month === "march"){ month = 03; }
-			  else if(month === "april"){ month = 04; }
-			  else if(month === "may"){ month = 05; }
-			  else if(month === "june"){ month = 06; }
-			  else if(month === "july"){ month = 07; }
-			  else if(month === "august"){ month = 08; }
-			  else if(month === "september"){ month = 09; }
-			  else if(month === "october"){ month = 10; }
-			  else if(month === "november"){ month = 11; }
-			  else if(month === "december"){ month = 12; }
-			  return month;
-		  }
-
-		  function populateList(){
-			  var minDay = 1;
-			  var maxDay = 31;
-			  dayList = document.getElementById('day');
-
-			  for (var i = minDay; i <= maxDay; i++){
-				  var option = document.createElement('option');
-				  option.value = i;
-				  option.innerHTML = i;
-				  dayList.appendChild(option);
-			  }
-			  var minYear = 1900;
-			  var maxYear = new Date().getFullYear();
-			  yearList = document.getElementById('year');
-
-			  for (i = minYear; i <= maxYear; i++){
-				  var option = document.createElement('option');
-				  option.value = i;
-				  option.innerHTML = i;
-				  yearList.appendChild(option);
-			  }
-			  yearList.value = maxYear;
-		  }
-
-		  function updateUser(name){
-				var csrf = $('input[name=csrfmiddlewaretoken]').val();
-				dob = processNewDateOfBirth();
-
-				var fd = new FormData();
-				fd.append("csrfmiddlewaretoken", csrf);
-				fd.append("profileImage", $("#profileImage")[0].files[0]);
-				fd.append("id", $("#id").val());
-				fd.append("username",$("#username").val());
-				fd.append("firstName",$("#firstName").val());
-				fd.append("lastName", $("#lastName").val());
-				fd.append("dateOfBirth", dob);
-				fd.append("bio", $("#bio").val());
-				fd.append("gender",$('input[name="gender"]:checked').val());
-
-		  	$.ajax({
-		       type: 'POST',
-		       url: '/matchingapp/update/',
-		       data: fd,
-					 contentType: 'multipart/form-data',
-					 processData: false,
-					 contentType: false,
-		    	 success: function(data){
-						 if(data[0].success == "false"){
-							 alert("Please enter a valid age (18+)");
-						 }else{
-			  			console.log("Done");
-							location.reload();
-						}
-		  		}
-		  	});
-		  }
-
-		  function processNewDateOfBirth(){
-			  yearList = document.getElementById('year');
-			  monthList = document.getElementById('month');
-			  dayList = document.getElementById('day');
-
-			  year = yearList.value;
-			  month = monthList.value;
-			  day = dayList.value;
-
-			  month = convertMonth(month);
-
-			  return `${year}-${month}-${day}`
-		  }
-
-			$(document).on('click', '.delete', function () {
-        if (confirm("Are you sure you want to delete this?")){
-          var id = $("#id").val();
-          $.ajax({
-            type: "DELETE",
-            url: "/matchingapp/delete/",
-            data: JSON.stringify({'id': id}),
-            success: function() {
-                console.log("Success");
-								returnToLogin();
-            },
-            error: function(req, status, err){
-                console.log("Something went wrong", status, err)
-            },
-          });
-        }
-      });
 
       function returnToLogin(){
         window.location = '/matchingapp/loginPage';
