--- a/matchingapp/templates/matchingapp/profile.html
+++ b/matchingapp/templates/matchingapp/profile.html
@@ -9,44 +9,8 @@
     <div class="container">
 		<h3 id="title" class="subheaders">| Profile</h3>
 		<br/><img id="currentImage" name="currentImage"/><br/><br/>
-		<label>Number of Likes: </label><p id="likes"></p>
+		<label>Number of Likes:</label><p id="likes"></p>
 			<div class = "form-group">
-<<<<<<< HEAD
-				<!--when i get rid of this span the user data is not loaded-->
-				  	<span>
-					  	<label class="mr-sm-2" for="inlineFormCustomSelect">Date of Birth</label>
-							<div class="row">
-								<div class="col">
-							  	<select id="day" class="custom-select mb-2 mr-sm-2 mb-sm-0"></select>
-								</div>
-								<div class="col">
-								  <select id="month" class="custom-select mb-2 mr-sm-2 mb-sm-0">
-								  	<option value="january">January</option><option value="february">February</option>
-								  	<option value="march">March</option><option value="april">April</option>
-								  	<option value="may">May</option><option value="june">June</option>
-								  	<option value="july">July</option><option value="august">August</option>
-								  	<option value="september">September</option><option value="october">October</option>
-								  	<option value="november">November</option><option value="december">December</option>
-								  </select>
-								</div>
-								<div class="col">
-						  		<select id="year" class="custom-select mb-2 mr-sm-2 mb-sm-0"></select>
-								</div>
-							</div>
-				  		</span><br/>
-			<label for="firstName">First Name:</label>
-			<p id = "firstName"> FirstName </p>
-			<label for="lastName">Last Name:</label>
-			<p id = "lastName"> Last Name </p>
-			<label for="age">Age:</label>
-			<p id = age> Age </p>
-			<label for="bio">Bio:</label>
-			<p id = "bio"> Bio </p>
-			<label>Hobbies</label>
-			<ol id="hobbyList"> </ol>
-			<div class="form-group">
-			<button class="btn btn-primary"> Change Profile </button>
-=======
 				<label for="firstName">First Name:</label>
 				<p id = firstName> FirstName </p>
 				<label for="lastName">Last Name:</label>
@@ -61,25 +25,17 @@
 				<ol id="hobbyList"> </ol>
 			</div>
 			<button class="btn btn-primary" onclick="location.href = '../settings/'"">Change Profile</button>
->>>>>>> 1f40709882e67e9b8c5f5e38d4b7bf95ee245aa2
 	</div>
-
     </body>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type = 'text/javascript'>
-
-
 		function obtainUser(){
 			var user = authenticateUser();
 		loadUserInfo(user);
 		}
-
-
       function authenticateUser(){
         var loggedIn = false;
         var username = "";
-
         $.ajax({
           async: false,
            type: 'GET',
@@ -107,113 +63,6 @@
         return age;
       }
 
-<<<<<<< HEAD
-			function loadUserInfo(username){
-				var csrf = $('input[name=csrfmiddlewaretoken]').val();
-		     $.ajax({
-		           async: false,
-		           type: 'POST',
-		           url: '/matchingapp/loadUser/',
-		           data: {
-								 csrfmiddlewaretoken: csrf,
-		             username: username
-		           },
-		           success: function(data){
-		              if(data[0].success === "true"){
-										$("#currentImage").attr('src', data[0].image);
-										document.getElementById("likes").innerHTML = data[0].likes;
-									  document.getElementById("title").innerHTML = data[0].username;
-									  document.getElementById("firstName").innerHTML = data[0].firstName;
-									  document.getElementById("lastName").innerHTML = data[0].lastName;
-									  age = calculateAge(data[0].dob);
-									  document.getElementById("age").innerHTML = age;
-									  document.getElementById("bio").innerHTML = data[0].bio;
-
-						        var dateOfBirth = (data[0].dob).toString();
-						        var parts = dateOfBirth.split('-');
-						        var year = parseInt(parts[0], 10);
-						        var month = parseInt(parts[1], 10);
-						        var day = parseInt(parts[2], 10);
-
-						        dayList = document.getElementById('day');
-						        dayList.value = day;
-
-						        monthList = document.getElementById('month');
-						        monthString = convertMonth(month).toLowerCase();
-						        monthList.value = monthString;
-
-						        yearList = document.getElementById('year');
-						        yearList.value = year;
-
-							       var hobbies = data[0].hobbies;
-							       var items = []
-		       	 				 for(var i=0; i < hobbies.length; i++){
-		        						items.push($('<li/>').text(hobbies[i]));
-		       					 }
-		       					 $('#hobbyList').append.apply($('#hobbyList'), items);
-		         				 $('input[name="gender"][value=' + data[0].gender + ']').attr('checked', true);
-		              }
-		           }
-		        });
-		      }
-
-		  function convertMonth(month){
-			  if(month === 1){ month = "January"; }
-			  else if(month === 2){ month = "February"; }
-			  else if(month === 3){ month = "March"; }
-			  else if(month === 4){ month = "April"; }
-			  else if(month === 5){ month = "May"; }
-			  else if(month === 6){ month = "June"; }
-			  else if(month === 7){ month = "July"; }
-			  else if(month === 8){ month = "August"; }
-			  else if(month === 9){ month = "September"; }
-			  else if(month === 10){ month = "October"; }
-			  else if(month === 11){ month = "November"; }
-			  else if(month === 12){ month = "December"; }
-			  else if(month === "january"){ month = 01; }
-			  else if(month === "february"){ month = 02; }
-			  else if(month === "march"){ month = 03; }
-			  else if(month === "april"){ month = 04; }
-			  else if(month === "may"){ month = 05; }
-			  else if(month === "june"){ month = 06; }
-			  else if(month === "july"){ month = 07; }
-			  else if(month === "august"){ month = 08; }
-			  else if(month === "september"){ month = 09; }
-			  else if(month === "october"){ month = 10; }
-			  else if(month === "november"){ month = 11; }
-			  else if(month === "december"){ month = 12; }
-			  return month;
-		  }
-
-		  function populateList(){
-			  var minDay = 1;
-			  var maxDay = 31;
-			  dayList = document.getElementById('day');
-
-			  for (var i = minDay; i <= maxDay; i++){
-				  var option = document.createElement('option');
-				  option.value = i;
-				  option.innerHTML = i;
-				  dayList.appendChild(option);
-			  }
-			  var minYear = 1900;
-			  var maxYear = new Date().getFullYear();
-			  yearList = document.getElementById('year');
-
-			  for (i = minYear; i <= maxYear; i++){
-				  var option = document.createElement('option');
-				  option.value = i;
-				  option.innerHTML = i;
-				  yearList.appendChild(option);
-			  }
-			  yearList.value = maxYear;
-		  }
-
-      function obtainUser(){
-  			populateList();
-  			var user = authenticateUser();
-        loadUserInfo(user);
-=======
 		function loadUserInfo(username){
 			var csrf = $('input[name=csrfmiddlewaretoken]').val();
 	     $.ajax({
@@ -226,22 +75,19 @@
 	           },
 	           success: function(data){
 	              if(data[0].success === "true"){
-
-
-					  document.getElementById("title").innerHTML = "| " + data[0].username;
+					  document.getElementById("title").innerHTML = "Hi " + data[0].username;
 					  document.getElementById("firstName").innerHTML = data[0].firstName;
 					  document.getElementById("lastName").innerHTML = data[0].lastName;
 					  age = calculateAge(data[0].dob);
 					  document.getElementById("age").innerHTML = age;
 					  document.getElementById("bio").innerHTML = data[0].bio;
+						document.getElementById("likes").innerHTML = data[0].likes;
 					  $("#currentImage").attr('src', data[0].image);
-
 					        var dateOfBirth = (data[0].dob).toString();
 					        var parts = dateOfBirth.split('-');
 					        var year = parseInt(parts[0], 10);
 					        var month = parseInt(parts[1], 10);
 					        var day = parseInt(parts[2], 10);
-
 							document.getElementById("dob").innerHTML = day + "-" + month + "-" + year;
 						       var hobbies = data[0].hobbies;
 						       var items = []
@@ -254,11 +100,8 @@
 	           }
 	        });
 	      }
-
-
       function returnToLogin(){
         window.location = '/matchingapp/loginPage';
->>>>>>> 1f40709882e67e9b8c5f5e38d4b7bf95ee245aa2
       }
   </script>
 {% endblock %}
