--- a/matchingapp/templates/matchingapp/settings.html
+++ b/matchingapp/templates/matchingapp/settings.html
@@ -289,7 +289,7 @@
 					 processData: false,
 					 contentType: false,
 		    	 success: function(data){
-			  			console.log("Done");
+			  			location.reload();
 							loadUserInfo(username);
 						}
 		  	});
