--- a/matchingapp/templates/matchingapp/profile.html
+++ b/matchingapp/templates/matchingapp/profile.html
@@ -25,6 +25,8 @@
 				<ol id="hobbyList"> </ol>
 			</div>
 			<button class="btn btn-primary" onclick="location.href = '../settings/'"">Change Profile</button>
+			<br/>
+			<br/>
 	</div>
     </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -75,7 +77,7 @@
 	           },
 	           success: function(data){
 	              if(data[0].success === "true"){
-					  document.getElementById("title").innerHTML = "Hi " + data[0].username;
+					  document.getElementById("title").innerHTML = "Hi, " + data[0].username + "!";
 					  document.getElementById("firstName").innerHTML = data[0].firstName;
 					  document.getElementById("lastName").innerHTML = data[0].lastName;
 					  age = calculateAge(data[0].dob);
