--- a/matchingapp/templates/matchingapp/base.html
+++ b/matchingapp/templates/matchingapp/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% load static %}
-<!-- This is the basic html pages for all pages so certain code don't need to be repeated-->
+<!-- This is the basic html page for all pages so certain code doesn't need to be repeated-->
 <html lang="en">
   <head>
     <meta charset="UTF-8">
